chore(lab11): work

--- a/tex/src/document.tex
+++ b/tex/src/document.tex
@@ -1,6 +1,5 @@
 \input{./preamble.tex}
 
-
 \begin{document}	
 	\begin{figure}[h!]
 		\centering
@@ -26,5 +25,10 @@
 		\centering
 		\includegraphics{./images/task4_2}
 		\caption{Конечные автоматы 2}
+	\end{figure}
+	\begin{figure}[h!]
+		\centering
+		\includegraphics{./images/task5}
+		\caption{Хуйня}
 	\end{figure}
 \end{document}
